--- a/project.html
+++ b/project.html
@@ -18,14 +18,6 @@
 </head>
 
 <body>
-    <!-- <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a id="breedsBtn" href="#">
-          all breeds
-        </a>
-      </li>
-      </li>
-    </ul> -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Dogiees...</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -57,6 +49,7 @@
                 <button class="btn btn-outline-light my-2 my-sm-0" type="submit" id="search">Search</button>
             </form>
             <p id="dogNotFound" class="text-white"></p>
+            <p id="seeYourDog" class="lead text-white"></p>
         </div>
     </section>
     <section id="breedsList-section" class="mb-5">
@@ -77,6 +70,31 @@
         </div>
     </section>
     <footer>
+
+        <ul id="social-media" class="bg-dark p-0 m-0">
+            <li>
+                <a href="">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="fab fa-google"></i>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+        <div class="copy-rights text-white text-center py-1">All rights reserverd &copy;</div>
+
 
     </footer>
 
