--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <ul class="navbar-nav ml-auto" id="nav-links">
                 <li class="nav-item active">
                     <a id="breedsBtn" class="nav-link" href="#breedsList-section">
+                        All breeds
                     </a>
                 </li>
             </ul>
